# Thesis

catkin_ws/src/plane-detection/: CMakeLists.txt
catkin_ws/src/plane-detection/src/: PlaneDetectionHub.cpp
catkin_ws/src/plane-detection/src/3DKHT/: CMakeLists.txt  accum_t.h  accumulator_t.h  accumulatorball_t.h  hough.cpp  kernel_t.h  main.cpp  octree_t.cpp  octree_t.h  plane_t.h  reader_file.h  sample_app.cpp  sample_app.h  settings.h
catkin_ws/src/plane-detection/src/3DKHT/SwissArmyKnife/: CMakeLists.txt  CamManager.cpp  CamManager.h  Canvas.h  File.h  FileOpen.h  LargeNumber.h  Lighting.cpp  Lighting.h  Manager.h  Mathematic.h  OpenGL.cpp  OpenGL.h  ReadMe.txt  SwissArmyKnife.h  SwissArmyKnife.vcxproj  SwissArmyKnife.vcxproj.filters  Timer.h  Utils.cpp  Utils.h
